<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        layout="@layout/toolbar_custom"/>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_basicProTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="Developer"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_basicProSubtitle"
                android:layout_width="match_parent"
                android:text="@string/about_me"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="COVID-19 Data Copyright"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_covid_data_copyright"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="Information Copyright"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_information_copyright"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>