<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/holo_orange_dark"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_provinceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="DKI Jakarta"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/title_positive"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_provinceName"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical"
            app:cardBackgroundColor="@android:color/holo_red_dark"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/positive"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_positive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/title_recovered"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_provinceName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical"
            app:cardBackgroundColor="@android:color/holo_green_dark"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recovered"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/title_death"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_provinceName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical"
            app:cardBackgroundColor="#6A0DAD"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/death"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_death"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>