<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar_custom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="INDONESIA"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/idnflag" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_total"
                    style="@style/CardViewDashBoardLeft"
                    android:orientation="vertical"
                    card_view:cardBackgroundColor="@android:color/holo_orange_dark"
                    card_view:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/title_totalcases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/total_cases"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_totalCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_totalcases"
                            android:layout_centerHorizontal="true"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_recovered"
                    style="@style/CardViewDashBoardLeft"
                    android:layout_below="@id/cardview_total"
                    android:orientation="vertical"
                    card_view:cardBackgroundColor="@android:color/holo_green_dark"
                    card_view:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/title_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/recovered"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_recovered"
                            android:layout_centerHorizontal="true"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_death"
                    style="@style/CardViewDashBoardRight"
                    android:layout_below="@id/cardview_positive"
                    card_view:cardBackgroundColor="#6A0DAD"
                    card_view:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/title_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/death"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_death"
                            android:layout_centerHorizontal="true"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_positive"
                    style="@style/CardViewDashBoardRight"
                    android:orientation="vertical"
                    card_view:cardBackgroundColor="@android:color/holo_red_dark"
                    card_view:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/title_positive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/positive"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_positive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_positive"
                            android:layout_centerHorizontal="true"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="BY PROVINCE"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/province" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            card_view:queryHint="Jawa Barat" />

        <TextView
            android:id="@+id/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:clickable="true"
            android:focusable="true"
            android:text="View all"
            android:textColor="@android:color/holo_blue_dark" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_provinceCases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_provinces" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </FrameLayout>


    </LinearLayout>


</ScrollView>